--- a/foot/src/main/resources/templates/user/include/head.html
+++ b/foot/src/main/resources/templates/user/include/head.html
@@ -423,7 +423,7 @@
 										<li><a class="dropdown-item" href="/ReservationDetailsUserList">예약내역</a></li>
 										<li><a class="dropdown-item" href="/SocialMatchDetailsUserList">소셜매칭 내역</a></li>
 										<li><a class="dropdown-item" href="/ReviewUserList">리뷰 내역</a></li>
-										<li><a class="dropdown-item" href="/FavoritesUserList">즐겨찾기</a></li>
+										<li><a class="dropdown-item" href="/favorites/FavoritesUserList">즐겨찾기</a></li>
 										<li><a class="dropdown-item" href="/AccountSettingsUserMfom">계정 설정</a></li>
 										<li><a class="dropdown-item" href="/PasswordChangeUserMfom">비밀번호 변경</a></li>
 										
