--- a/foot/src/main/resources/templates/user/include/account.html
+++ b/foot/src/main/resources/templates/user/include/account.html
@@ -20,7 +20,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link " aria-current="page" href="/FavoritesUserList">
+									<a class="nav-link " aria-current="page" href="/favorites/FavoritesUserList">
 										<i class="bi bi-star-fill me-2"></i>
 										즐겨찾기
 									</a>
